url github modified

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home":"https//lamOpenclassroom.github.io/portfolio",
+  "home":"https://lamopenclassroom.github.io/portfolio",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
